--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <p id="heading">15 puzzle</p>
         <button class="gbutton" onclick=shuffle()>new game</button>
         <p id="moveCount">Moves:0</p>
+        <div id="stopwatch">00:00</div>
+        <button onclick="stopStopwatch()">Stop</button>
+      
+
     <table>
         <tr id="row1">
         <th id="block11"  class="slice slice1" onclick="clickSlice(1,1)"></th>
